syntax = "proto3";
package scheduler.v2;

import "aspect/v2/base_message.proto";

option go_package = "github.com/artela-network/artelasdk/types";

message ScheduleTask{
  Schedule schedule=1;
  int64 blockHeight =2;
  // eth tx hash
  string txHash=3;
  //  nonce
  uint64 txNonce = 4;
  // cosmos sdk tx
  bytes sdkTx=5;
}

message Schedule  {
  ScheduleId id=1;
  uint64 createHeight = 2;
  //	0 close, 1 start
  ScheduleStatus status = 3;
  // 0 periodic, 1 adhoc
  aspect.v2.EthTransaction tx = 4;
  uint64 startBlock= 5;
  uint64 everyNBlock = 6;
  uint64 maxRetry = 7;
  uint64 count = 8;
}

enum ScheduleStatus {
  Close=0;
  Open=1;
}
message ScheduleId  {
  string scheduleName = 1;
  string aspectId = 2;
}

message PeriodicType {
  uint64 startBlock=1;
  uint64 everyNBlocks = 2;
  uint64 maxRetry = 3;
  uint64 count = 4;
}
message AdhocType {
  uint64 nextNBlocks = 1;
  uint64 maxRetry = 2;
}
message TaskResult{ 
 repeated TaskTx confirmTxs=1;
 uint64 count=2;
}
message TaskTx{
  int64 blockHeight=1;
  string txHash=2;
}
message TryTask{
  bool needRetry=1;
  repeated TaskTx taskTxs=2;
}